[ID-24] Reformat DragAndDropTests 2nd way